# currency_informer

./: LICENSE  README.md  notify.py  pyproject.toml
src/exchnge_notify_arcter/: notify.py
