[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "currency_informer"
version = "0.0.1"
authors = [
  { name="Mate Varga", email="arcter01@gmail.com" },
]
description = "A small package for checking exchange rates"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/arcter/currency_informer"
